
  - The optimizers for the MAPCAR, MAPCAN, etc, were broken. They will
    be replaced with compiler macro functions, which are easier to
    maintain.

  - CLEAR-INPUT now works with interactive streams (*STANDARD-INPUT, etc).

  - On systems which support it, LISTEN-STREAM is now implemented
    using select(). This means it now works on sockets as well.

* ANSI compatibility:

  - DIRECTORY now understands :WILD, :UP, :WILD-INFERIORS, and, as an
    extension, other masks within the pathname ("/foo*/**/d*d.l?sp").
    It also accepts and ignores all keyword arguments.

  - LOAD no longer binds *STANDARD-INPUT* to the file being read. That
    was wrong, AFAIK.

  - An important problem in DEFSTRUCT has been solved: when :CONC-NAME
    is NIL, it may happen that a second definition of a function
    overwrites the reader of a slot. For instance
        (defstruct (foo (:conc-name nil)) slot-a)
    followed by
        (defstruct (faa (:include foo) (:conc-name nil)))
    would produce an accessor SLOT-A which only works for structures
    of type FAA:
        (SLOT-A (MAKE-FAA)) => NIL
        (SLOT-A (MAKE-FOO)) => Error

  - The set of valid keyword arguments for a method depends on the
    applicable methods for each specific call. Thus, the associated
    LAMBDA forms need not check the consistency of arguments
    themselves, and may be declared with &allow-other-keys. With the
    new code, this is valid:
	(defmethod foo (&key b) ...)
	(defmethod foo :after (&key x) ...)
    but an invalid call (FOO :C 2) is undetected.

  - All streams have from now on element type (UNSIGNED-BYTE 8).
    READ-CHAR and WRITE-CHAR work on any stream, though, as do
    READ-BYTE and WRITE-BYTE.

  - READ/WRITE-SEQUENCE implemented.


TODO:
=====

* Selectively remove spices from read.d and object.h

* Implement memory collection based on mmap()

* Improve the garbage collector using kernel information about dirty
  pages.

* Improve fixnum_times.
