@@ -1004,6 +1004,7 @@ cl_symbols[] = {
 {SYS_ "*INTERRUPT-ENABLE*", SI_SPECIAL, NULL, 1},
 {SYS_ "*KEEP-DEFINITIONS*", SI_SPECIAL, NULL, -1},
 {SYS_ "*LOAD-HOOKS*", SI_SPECIAL, NULL, -1},
+{SYS_ "*LOAD-SEARCH-LIST*", SI_SPECIAL, NULL, -1},
 {SYS_ "*MAKE-CONSTANT", SI_ORDINARY, si_Xmake_constant, 2},
 {SYS_ "*MAKE-SPECIAL", SI_ORDINARY, si_Xmake_special, 1},
 {SYS_ "*PRINT-PACKAGE*", SI_SPECIAL, NULL, -1},
@@ -1314,6 +1315,7 @@ cl_symbols[] = {
 {KEY_ "RENAME", KEYWORD, NULL, -1},
 {KEY_ "RENAME-AND-DELETE", KEYWORD, NULL, -1},
 {KEY_ "SET-DEFAULT-PATHNAME", KEYWORD, NULL, -1},
+{KEY_ "SEARCH-LIST", KEYWORD, NULL, -1},
 {KEY_ "SIZE", KEYWORD, NULL, -1},
 {KEY_ "START", KEYWORD, NULL, -1},
 {KEY_ "START1", KEYWORD, NULL, -1},
